Service.yml
apiVersion: v1
kind: Service
metadata:
  name: lab10-zad2
  namespace: default
spec:
  selector:
    app: lab10-zad2
  type: NodePort
  ports:
  - name: http
    targetPort: 8080
    port: 80
