Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab10-zad2
spec:
  rules:
    - host: http://zad2.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab10-zad2
                port:
                  number: 80
